# templates_python

./: .cruft.json  README.md
.github/workflows/: cruft-update-webhook.yml  editorconfig-checker.yml
{{cookiecutter.project_name}}/: Makefile  Taskfile.dist.yml  docker-compose.yml  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: cruft-update.yml
{{cookiecutter.project_name}}/container/: Dockerfile  entrypoint.sh
{{cookiecutter.project_name}}/tasks/: poetry.tasks.yml
