[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = ""
authors = ["ogontaro <ogontaro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pylint = "^2.17.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
